tests/fixtures/valid/escape_carriage_return.mmd
flowchart TD
    Start --> A[println 'hello\\rworld']
    A --> End
