tests/fixtures/invalid/multiple_outgoing_edges.mmd
flowchart TD
    Start --> A[println 'hello']
    A --> B[println 'world']
    A --> C[println 'foo']
    B --> End
    C --> End
